CompiladorTapia_Iles/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones main

   2  main : VOID MAIN '{' defvariables sentencias '}'

   3  defvariables : defvariables defvariable
   4               |

   5  defvariable : tipoSimple variables ';'
   6              | tipoComplejo variables ';'

   7  definiciones : definiciones definicion
   8               |

   9  definicion : tipoSimple variables ';'
  10             | tipoComplejo variables ';'
  11             | defFuncion

  12  variables : ID
  13            | variables ',' ID

  14  sentencias : sentencias sentencia
  15             |

  16  sentencia : expresion '=' expresion ';'
  17            | READ expresiones ';'
  18            | WRITE expresiones ';'
  19            | condicion
  20            | while
  21            | RETURN expresion ';'
  22            | ID '(' expresiones ')' ';'
  23            | ID '(' ')' ';'
  24            | expresion MASMAS ';'
  25            | expresion MENOSMENOS ';'
  26            | MASMAS expresion ';'
  27            | MENOSMENOS expresion ';'

  28  while : WHILE '(' expresion ')' sentencia
  29        | WHILE '(' expresion ')' '{' sentencias '}'

  30  condicion : IF '(' expresion ')' sentencia condicion2
  31            | IF '(' expresion ')' '{' sentencias '}' condicion2

  32  condicion2 : ELSE sentencia
  33             | ELSE '{' sentencias '}'
  34             |

  35  expresiones : expresion
  36              | expresion ',' expresiones

  37  defFuncion : tipoSimple ID '(' parametros ')' '{' defvariables sentencias '}'
  38             | VOID ID '(' parametros ')' '{' defvariables sentencias '}'

  39  tipo : tipoSimple
  40       | tipoComplejo

  41  tipoSimple : INT
  42             | DOUBLE
  43             | CHAR

  44  tipoComplejo : tipo '[' CTE_ENTERA ']'
  45               | STRUCT '{' campos '}'

  46  campo : tipo variables ';'

  47  campos : campos campo
  48         |

  49  parametros : parametro parametros2
  50             |

  51  parametros2 : ',' parametro parametros2
  52              |

  53  parametro : tipoSimple ID

  54  expresion : expresion '+' expresion
  55            | expresion '*' expresion
  56            | expresion '/' expresion
  57            | expresion '%' expresion
  58            | expresion '-' expresion
  59            | '-' expresion
  60            | expresion MASMAS
  61            | expresion MENOSMENOS
  62            | MASMAS expresion
  63            | MENOSMENOS expresion
  64            | CTE_ENTERA
  65            | ID
  66            | CTE_CARACTER
  67            | CTE_REAL
  68            | expresion '[' expresion ']'
  69            | '(' expresion ')'
  70            | ID '(' expresiones ')'
  71            | ID '(' ')'
  72            | '(' tipoSimple ')' expresion
  73            | expresion '>' expresion
  74            | expresion MAYORIGUAL expresion
  75            | expresion '<' expresion
  76            | expresion MENORIGUAL expresion
  77            | expresion DISTINTO expresion
  78            | expresion IGUALDAD expresion
  79            | expresion Y expresion
  80            | expresion O expresion
  81            | '!' expresion
  82            | expresion '.' ID
  83            | '(' expresion INTERROG expresion DOSPUNTOS expresion ')'

state 0
	$accept : . programa $end  (0)
	definiciones : .  (8)

	.  reduce 8

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . main  (1)
	definiciones : definiciones . definicion  (7)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	VOID  shift 6
	STRUCT  shift 7
	.  error

	main  goto 8
	tipoSimple  goto 9
	tipoComplejo  goto 10
	definicion  goto 11
	defFuncion  goto 12
	tipo  goto 13


state 3
	tipoSimple : INT .  (41)

	.  reduce 41


state 4
	tipoSimple : DOUBLE .  (42)

	.  reduce 42


state 5
	tipoSimple : CHAR .  (43)

	.  reduce 43


state 6
	main : VOID . MAIN '{' defvariables sentencias '}'  (2)
	defFuncion : VOID . ID '(' parametros ')' '{' defvariables sentencias '}'  (38)

	ID  shift 14
	MAIN  shift 15
	.  error


state 7
	tipoComplejo : STRUCT . '{' campos '}'  (45)

	'{'  shift 16
	.  error


state 8
	programa : definiciones main .  (1)

	.  reduce 1


state 9
	definicion : tipoSimple . variables ';'  (9)
	defFuncion : tipoSimple . ID '(' parametros ')' '{' defvariables sentencias '}'  (37)
	tipo : tipoSimple .  (39)

	ID  shift 17
	'['  reduce 39

	variables  goto 18


state 10
	definicion : tipoComplejo . variables ';'  (10)
	tipo : tipoComplejo .  (40)

	ID  shift 19
	'['  reduce 40

	variables  goto 20


state 11
	definiciones : definiciones definicion .  (7)

	.  reduce 7


state 12
	definicion : defFuncion .  (11)

	.  reduce 11


state 13
	tipoComplejo : tipo . '[' CTE_ENTERA ']'  (44)

	'['  shift 21
	.  error


state 14
	defFuncion : VOID ID . '(' parametros ')' '{' defvariables sentencias '}'  (38)

	'('  shift 22
	.  error


state 15
	main : VOID MAIN . '{' defvariables sentencias '}'  (2)

	'{'  shift 23
	.  error


state 16
	tipoComplejo : STRUCT '{' . campos '}'  (45)
	campos : .  (48)

	.  reduce 48

	campos  goto 24


state 17
	variables : ID .  (12)
	defFuncion : tipoSimple ID . '(' parametros ')' '{' defvariables sentencias '}'  (37)

	'('  shift 25
	';'  reduce 12
	','  reduce 12


state 18
	definicion : tipoSimple variables . ';'  (9)
	variables : variables . ',' ID  (13)

	';'  shift 26
	','  shift 27
	.  error


state 19
	variables : ID .  (12)

	.  reduce 12


state 20
	definicion : tipoComplejo variables . ';'  (10)
	variables : variables . ',' ID  (13)

	';'  shift 28
	','  shift 27
	.  error


state 21
	tipoComplejo : tipo '[' . CTE_ENTERA ']'  (44)

	CTE_ENTERA  shift 29
	.  error


state 22
	defFuncion : VOID ID '(' . parametros ')' '{' defvariables sentencias '}'  (38)
	parametros : .  (50)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 50

	tipoSimple  goto 30
	parametros  goto 31
	parametro  goto 32


state 23
	main : VOID MAIN '{' . defvariables sentencias '}'  (2)
	defvariables : .  (4)

	.  reduce 4

	defvariables  goto 33


state 24
	tipoComplejo : STRUCT '{' campos . '}'  (45)
	campos : campos . campo  (47)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 7
	'}'  shift 34
	.  error

	tipoSimple  goto 35
	tipoComplejo  goto 36
	tipo  goto 37
	campo  goto 38


state 25
	defFuncion : tipoSimple ID '(' . parametros ')' '{' defvariables sentencias '}'  (37)
	parametros : .  (50)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 50

	tipoSimple  goto 30
	parametros  goto 39
	parametro  goto 32


state 26
	definicion : tipoSimple variables ';' .  (9)

	.  reduce 9


state 27
	variables : variables ',' . ID  (13)

	ID  shift 40
	.  error


state 28
	definicion : tipoComplejo variables ';' .  (10)

	.  reduce 10


state 29
	tipoComplejo : tipo '[' CTE_ENTERA . ']'  (44)

	']'  shift 41
	.  error


state 30
	parametro : tipoSimple . ID  (53)

	ID  shift 42
	.  error


state 31
	defFuncion : VOID ID '(' parametros . ')' '{' defvariables sentencias '}'  (38)

	')'  shift 43
	.  error


state 32
	parametros : parametro . parametros2  (49)
	parametros2 : .  (52)

	','  shift 44
	')'  reduce 52

	parametros2  goto 45


state 33
	main : VOID MAIN '{' defvariables . sentencias '}'  (2)
	defvariables : defvariables . defvariable  (3)
	sentencias : .  (15)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 7
	CTE_ENTERA  reduce 15
	ID  reduce 15
	READ  reduce 15
	WRITE  reduce 15
	WHILE  reduce 15
	IF  reduce 15
	CTE_REAL  reduce 15
	CTE_CARACTER  reduce 15
	RETURN  reduce 15
	MASMAS  reduce 15
	MENOSMENOS  reduce 15
	'!'  reduce 15
	'-'  reduce 15
	'('  reduce 15
	'}'  reduce 15

	sentencias  goto 46
	defvariable  goto 47
	tipoSimple  goto 48
	tipoComplejo  goto 49
	tipo  goto 13


state 34
	tipoComplejo : STRUCT '{' campos '}' .  (45)

	.  reduce 45


state 35
	tipo : tipoSimple .  (39)

	.  reduce 39


state 36
	tipo : tipoComplejo .  (40)

	.  reduce 40


state 37
	tipoComplejo : tipo . '[' CTE_ENTERA ']'  (44)
	campo : tipo . variables ';'  (46)

	ID  shift 19
	'['  shift 21
	.  error

	variables  goto 50


state 38
	campos : campos campo .  (47)

	.  reduce 47


state 39
	defFuncion : tipoSimple ID '(' parametros . ')' '{' defvariables sentencias '}'  (37)

	')'  shift 51
	.  error


state 40
	variables : variables ',' ID .  (13)

	.  reduce 13


state 41
	tipoComplejo : tipo '[' CTE_ENTERA ']' .  (44)

	.  reduce 44


state 42
	parametro : tipoSimple ID .  (53)

	.  reduce 53


state 43
	defFuncion : VOID ID '(' parametros ')' . '{' defvariables sentencias '}'  (38)

	'{'  shift 52
	.  error


state 44
	parametros2 : ',' . parametro parametros2  (51)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	.  error

	tipoSimple  goto 30
	parametro  goto 53


state 45
	parametros : parametro parametros2 .  (49)

	.  reduce 49


state 46
	main : VOID MAIN '{' defvariables sentencias . '}'  (2)
	sentencias : sentencias . sentencia  (14)

	CTE_ENTERA  shift 54
	ID  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	RETURN  shift 62
	MASMAS  shift 63
	MENOSMENOS  shift 64
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	'}'  shift 68
	.  error

	sentencia  goto 69
	expresion  goto 70
	condicion  goto 71
	while  goto 72


state 47
	defvariables : defvariables defvariable .  (3)

	.  reduce 3


state 48
	defvariable : tipoSimple . variables ';'  (5)
	tipo : tipoSimple .  (39)

	ID  shift 19
	'['  reduce 39

	variables  goto 73


state 49
	defvariable : tipoComplejo . variables ';'  (6)
	tipo : tipoComplejo .  (40)

	ID  shift 19
	'['  reduce 40

	variables  goto 74


state 50
	variables : variables . ',' ID  (13)
	campo : tipo variables . ';'  (46)

	';'  shift 75
	','  shift 27
	.  error


state 51
	defFuncion : tipoSimple ID '(' parametros ')' . '{' defvariables sentencias '}'  (37)

	'{'  shift 76
	.  error


state 52
	defFuncion : VOID ID '(' parametros ')' '{' . defvariables sentencias '}'  (38)
	defvariables : .  (4)

	.  reduce 4

	defvariables  goto 77


state 53
	parametros2 : ',' parametro . parametros2  (51)
	parametros2 : .  (52)

	','  shift 44
	')'  reduce 52

	parametros2  goto 78


state 54
	expresion : CTE_ENTERA .  (64)

	.  reduce 64


state 55
	sentencia : ID . '(' expresiones ')' ';'  (22)
	sentencia : ID . '(' ')' ';'  (23)
	expresion : ID .  (65)
	expresion : ID . '(' expresiones ')'  (70)
	expresion : ID . '(' ')'  (71)

	'('  shift 79
	IGUALDAD  reduce 65
	DISTINTO  reduce 65
	MAYORIGUAL  reduce 65
	MENORIGUAL  reduce 65
	O  reduce 65
	Y  reduce 65
	MASMAS  reduce 65
	MENOSMENOS  reduce 65
	'='  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'*'  reduce 65
	'/'  reduce 65
	'%'  reduce 65
	'.'  reduce 65
	'['  reduce 65


state 56
	sentencia : READ . expresiones ';'  (17)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 83
	expresiones  goto 84


state 57
	sentencia : WRITE . expresiones ';'  (18)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 83
	expresiones  goto 85


state 58
	while : WHILE . '(' expresion ')' sentencia  (28)
	while : WHILE . '(' expresion ')' '{' sentencias '}'  (29)

	'('  shift 86
	.  error


state 59
	condicion : IF . '(' expresion ')' sentencia condicion2  (30)
	condicion : IF . '(' expresion ')' '{' sentencias '}' condicion2  (31)

	'('  shift 87
	.  error


state 60
	expresion : CTE_REAL .  (67)

	.  reduce 67


state 61
	expresion : CTE_CARACTER .  (66)

	.  reduce 66


state 62
	sentencia : RETURN . expresion ';'  (21)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 88


state 63
	sentencia : MASMAS . expresion ';'  (26)
	expresion : MASMAS . expresion  (62)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 89


state 64
	sentencia : MENOSMENOS . expresion ';'  (27)
	expresion : MENOSMENOS . expresion  (63)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 90


state 65
	expresion : '!' . expresion  (81)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 91


state 66
	expresion : '-' . expresion  (59)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 92


state 67
	expresion : '(' . expresion ')'  (69)
	expresion : '(' . tipoSimple ')' expresion  (72)
	expresion : '(' . expresion INTERROG expresion DOSPUNTOS expresion ')'  (83)

	CTE_ENTERA  shift 54
	ID  shift 80
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	tipoSimple  goto 93
	expresion  goto 94


state 68
	main : VOID MAIN '{' defvariables sentencias '}' .  (2)

	.  reduce 2


state 69
	sentencias : sentencias sentencia .  (14)

	.  reduce 14


state 70
	sentencia : expresion . '=' expresion ';'  (16)
	sentencia : expresion . MASMAS ';'  (24)
	sentencia : expresion . MENOSMENOS ';'  (25)
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : expresion . '.' ID  (82)

	IGUALDAD  shift 95
	DISTINTO  shift 96
	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	O  shift 99
	Y  shift 100
	MASMAS  shift 101
	MENOSMENOS  shift 102
	'='  shift 103
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	.  error


state 71
	sentencia : condicion .  (19)

	.  reduce 19


state 72
	sentencia : while .  (20)

	.  reduce 20


state 73
	defvariable : tipoSimple variables . ';'  (5)
	variables : variables . ',' ID  (13)

	';'  shift 113
	','  shift 27
	.  error


state 74
	defvariable : tipoComplejo variables . ';'  (6)
	variables : variables . ',' ID  (13)

	';'  shift 114
	','  shift 27
	.  error


state 75
	campo : tipo variables ';' .  (46)

	.  reduce 46


state 76
	defFuncion : tipoSimple ID '(' parametros ')' '{' . defvariables sentencias '}'  (37)
	defvariables : .  (4)

	.  reduce 4

	defvariables  goto 115


state 77
	defvariables : defvariables . defvariable  (3)
	defFuncion : VOID ID '(' parametros ')' '{' defvariables . sentencias '}'  (38)
	sentencias : .  (15)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 7
	CTE_ENTERA  reduce 15
	ID  reduce 15
	READ  reduce 15
	WRITE  reduce 15
	WHILE  reduce 15
	IF  reduce 15
	CTE_REAL  reduce 15
	CTE_CARACTER  reduce 15
	RETURN  reduce 15
	MASMAS  reduce 15
	MENOSMENOS  reduce 15
	'!'  reduce 15
	'-'  reduce 15
	'('  reduce 15
	'}'  reduce 15

	sentencias  goto 116
	defvariable  goto 47
	tipoSimple  goto 48
	tipoComplejo  goto 49
	tipo  goto 13


state 78
	parametros2 : ',' parametro parametros2 .  (51)

	.  reduce 51


state 79
	sentencia : ID '(' . expresiones ')' ';'  (22)
	sentencia : ID '(' . ')' ';'  (23)
	expresion : ID '(' . expresiones ')'  (70)
	expresion : ID '(' . ')'  (71)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	')'  shift 117
	.  error

	expresion  goto 83
	expresiones  goto 118


state 80
	expresion : ID .  (65)
	expresion : ID . '(' expresiones ')'  (70)
	expresion : ID . '(' ')'  (71)

	'('  shift 119
	IGUALDAD  reduce 65
	DISTINTO  reduce 65
	MAYORIGUAL  reduce 65
	MENORIGUAL  reduce 65
	O  reduce 65
	Y  reduce 65
	MASMAS  reduce 65
	MENOSMENOS  reduce 65
	INTERROG  reduce 65
	DOSPUNTOS  reduce 65
	'='  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'*'  reduce 65
	'/'  reduce 65
	'%'  reduce 65
	'.'  reduce 65
	'['  reduce 65
	']'  reduce 65
	')'  reduce 65
	';'  reduce 65
	','  reduce 65


state 81
	expresion : MASMAS . expresion  (62)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 120


state 82
	expresion : MENOSMENOS . expresion  (63)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 121


state 83
	expresiones : expresion .  (35)
	expresiones : expresion . ',' expresiones  (36)
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : expresion . '.' ID  (82)

	IGUALDAD  shift 95
	DISTINTO  shift 96
	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	O  shift 99
	Y  shift 100
	MASMAS  shift 122
	MENOSMENOS  shift 123
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	','  shift 124
	')'  reduce 35
	';'  reduce 35


state 84
	sentencia : READ expresiones . ';'  (17)

	';'  shift 125
	.  error


state 85
	sentencia : WRITE expresiones . ';'  (18)

	';'  shift 126
	.  error


state 86
	while : WHILE '(' . expresion ')' sentencia  (28)
	while : WHILE '(' . expresion ')' '{' sentencias '}'  (29)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 127


state 87
	condicion : IF '(' . expresion ')' sentencia condicion2  (30)
	condicion : IF '(' . expresion ')' '{' sentencias '}' condicion2  (31)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 128


state 88
	sentencia : RETURN expresion . ';'  (21)
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : expresion . '.' ID  (82)

	IGUALDAD  shift 95
	DISTINTO  shift 96
	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	O  shift 99
	Y  shift 100
	MASMAS  shift 122
	MENOSMENOS  shift 123
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	';'  shift 129
	.  error


state 89
	sentencia : MASMAS expresion . ';'  (26)
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : MASMAS expresion .  (62)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : expresion . '.' ID  (82)

	MASMAS  shift 122
	MENOSMENOS  shift 123
	';'  shift 130
	IGUALDAD  reduce 62
	DISTINTO  reduce 62
	MAYORIGUAL  reduce 62
	MENORIGUAL  reduce 62
	O  reduce 62
	Y  reduce 62
	'='  reduce 62
	'>'  reduce 62
	'<'  reduce 62
	'+'  reduce 62
	'-'  reduce 62
	'*'  reduce 62
	'/'  reduce 62
	'%'  reduce 62
	'.'  reduce 62
	'['  reduce 62


state 90
	sentencia : MENOSMENOS expresion . ';'  (27)
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : MENOSMENOS expresion .  (63)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : expresion . '.' ID  (82)

	MASMAS  shift 122
	MENOSMENOS  shift 123
	';'  shift 131
	IGUALDAD  reduce 63
	DISTINTO  reduce 63
	MAYORIGUAL  reduce 63
	MENORIGUAL  reduce 63
	O  reduce 63
	Y  reduce 63
	'='  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	'.'  reduce 63
	'['  reduce 63


state 91
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : '!' expresion .  (81)
	expresion : expresion . '.' ID  (82)

	MASMAS  shift 122
	MENOSMENOS  shift 123
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	IGUALDAD  reduce 81
	DISTINTO  reduce 81
	MAYORIGUAL  reduce 81
	MENORIGUAL  reduce 81
	O  reduce 81
	Y  reduce 81
	INTERROG  reduce 81
	DOSPUNTOS  reduce 81
	'='  reduce 81
	'>'  reduce 81
	'<'  reduce 81
	']'  reduce 81
	')'  reduce 81
	';'  reduce 81
	','  reduce 81


state 92
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : '-' expresion .  (59)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : expresion . '.' ID  (82)

	MASMAS  shift 122
	MENOSMENOS  shift 123
	'['  shift 112
	IGUALDAD  reduce 59
	DISTINTO  reduce 59
	MAYORIGUAL  reduce 59
	MENORIGUAL  reduce 59
	O  reduce 59
	Y  reduce 59
	INTERROG  reduce 59
	DOSPUNTOS  reduce 59
	'='  reduce 59
	'>'  reduce 59
	'<'  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	'*'  reduce 59
	'/'  reduce 59
	'%'  reduce 59
	'.'  reduce 59
	']'  reduce 59
	')'  reduce 59
	';'  reduce 59
	','  reduce 59


state 93
	expresion : '(' tipoSimple . ')' expresion  (72)

	')'  shift 132
	.  error


state 94
	expresion : expresion . '+' expresion  (54)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)
	expresion : expresion . '%' expresion  (57)
	expresion : expresion . '-' expresion  (58)
	expresion : expresion . MASMAS  (60)
	expresion : expresion . MENOSMENOS  (61)
	expresion : expresion . '[' expresion ']'  (68)
	expresion : '(' expresion . ')'  (69)
	expresion : expresion . '>' expresion  (73)
	expresion : expresion . MAYORIGUAL expresion  (74)
	expresion : expresion . '<' expresion  (75)
	expresion : expresion . MENORIGUAL expresion  (76)
	expresion : expresion . DISTINTO expresion  (77)
	expresion : expresion . IGUALDAD expresion  (78)
	expresion : expresion . Y expresion  (79)
	expresion : expresion . O expresion  (80)
	expresion : expresion . '.' ID  (82)
	expresion : '(' expresion . INTERROG expresion DOSPUNTOS expresion ')'  (83)

	IGUALDAD  shift 95
	DISTINTO  shift 96
	MAYORIGUAL  shift 97
	MENORIGUAL  shift 98
	O  shift 99
	Y  shift 100
	MASMAS  shift 122
	MENOSMENOS  shift 123
	INTERROG  shift 133
	'>'  shift 104
	'<'  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	'.'  shift 111
	'['  shift 112
	')'  shift 134
	.  error


state 95
	expresion : expresion IGUALDAD . expresion  (78)

	CTE_ENTERA  shift 54
	ID  shift 80
	CTE_REAL  shift 60
	CTE_CARACTER  shift 61
	MASMAS  shift 81
	MENOSMENOS  shift 82
